--- a/static/partials/livePost.html
+++ b/static/partials/livePost.html
@@ -1,14 +1,5 @@
 <div class="container-fluid">
   <div class="row">
-    <div style="margin:0px 0px 15px 15px">
-        <button class="btn btn-md btn-default" ng-click="onShowResults()">
-          <i class="glyphicon glyphicon-chevron-left"></i>
-          <i class="glyphicon glyphicon-chevron-left"></i>
-          <i class="glyphicon glyphicon-chevron-left"></i>
-        </button>
-    </div>
-  </div>
-  <div class="row">
     <div class="col-xs-12 col-sm-6">
       <div class="panel panel-default" style="height: 305px">
         <header class="panel-heading">
@@ -45,4 +36,14 @@
       </carousel>
     </div><!--images-->
   </div><!--.row-->
+  <div class="center-block">
+    <button class="btn btn-md btn-default" ng-click="onShowResults()">
+      <i class="fa fa-chevron-left" ></i>
+      Back
+    </button>
+    <button class="btn btn-md btn-success" ng-click="onAddFavorite()">
+      <i class="fa fa-star"></i>
+      Add to Favorites
+    </button>
+  </div>
 </div><!--container-->
