--- a/static/partials/results.html
+++ b/static/partials/results.html
@@ -37,7 +37,7 @@
           <div id="post" class="post" ng-click="onLoadPost(post)">
             <img src="static/resources/img/placeholder.jpeg"></img>
             <h4>{{post.Title}}</h4>
-            <h5>${{post.Price}}<h5>
+            <h5>${{post.Price}}</h5>
           </div>
         </li>
       </ul>
