--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
       <script src="{{url_for('static', filename='resources/bootstrap-3.2.0/js/ui-bootstrap-tpls.min.js')}}"></script>
       <script src="{{url_for('static', filename='resources/bootbox.min.js')}}"></script>
       <script src="{{url_for('static', filename='resources/angular.rangeSlider.js')}}"></script>
+      <script src="{{url_for('static', filename='resources/underscore-min.js')}}"></script>
       <script src="{{url_for('static', filename='script.js')}}"></script>
     </head>
     <body ng-controller="mainController">
