--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -6,7 +6,9 @@
 	    <div class="input-group">
 	      <input id="search-text-field" ng-model="searchField" ng-submit="search()" placeholder="What are you looking for?" type="text" class="form-control" ng-Enter="search()">
 	      <span class="input-group-btn">
-	        <button id="search-button" ng-click="search()" class="btn btn-default">Go!</button>
+	        <button id="search-button" ng-click="search()" class="btn btn-default">
+	        <i class="fa fa-search fa-2x"></i>
+	        </button>
 	      </span>
 	    </div><!-- /input-group -->
 	  </div><!-- /.col-xs-12 -->
