--- a/static/resources/css/results-page.css
+++ b/static/resources/css/results-page.css
@@ -6,3 +6,11 @@ div.post{
 div.post:hover{
 	background-color: gray;
 }
+
+.sort-picker {
+	width:100px !important;
+}
+
+.sort-picker > button{
+	width:100px !important;
+}
