--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,11 @@
       <link rel="stylesheet" href="{{url_for('static', filename='resources/bootstrap-3.2.0/css/bootstrap.min.css')}}" />
       <link rel="stylesheet" href="{{url_for('static', filename='resources/bootstrap-3.2.0/css/bootstrap-theme.min.css')}}" />
       <link rel="stylesheet" href="{{url_for('static', filename='resources/bootstrap-3.2.0/css/ui-bootstrap-csp.css')}}" />
+      <link rel="stylesheet" href="{{url_for('static', filename='resources/bootstrap-3.2.0/css/bootstrap-select.min.css')}}" />
       <link rel="stylesheet" href="{{url_for('static', filename='resources/font-awesome-4.3.0/css/font-awesome.min.css')}}" />
       <link rel="stylesheet" href="{{url_for('static', filename='resources/css/home-page-styles.css')}}" />
       <link rel="stylesheet" href="{{url_for('static', filename='resources/css/create-post-page-styles.css')}}" />
       <link rel="stylesheet" href="{{url_for('static', filename='resources/css/master.css')}}" />
-      <link rel="stylesheet" href="{{url_for('static', filename='resources/css/angular.rangeSlider.css')}}" />
       <link rel="stylesheet" href="{{url_for('static', filename='resources/css/results-page.css')}}" />
       <!-- SPELLS -->
       <script src="{{url_for('static', filename='resources/jquery-2.1.3.min.js')}}"></script>
@@ -23,12 +23,12 @@
       <script src="{{url_for('static', filename='resources/bootstrap-3.2.0/js/bootstrap.min.js')}}"></script>
       <script src="{{url_for('static', filename='resources/bootstrap-3.2.0/js/ui-bootstrap-0.13.0.min.js')}}"></script>
       <script src="{{url_for('static', filename='resources/bootstrap-3.2.0/js/ui-bootstrap-tpls.min.js')}}"></script>
+      <script src="{{url_for('static', filename='resources/bootstrap-3.2.0/js/bootstrap-select.min.js')}}"></script>
       <script src="{{url_for('static', filename='resources/bootbox.min.js')}}"></script>
-      <script src="{{url_for('static', filename='resources/angular.rangeSlider.js')}}"></script>
       <script src="{{url_for('static', filename='resources/underscore-min.js')}}"></script>
       <script src="{{url_for('static', filename='script.js')}}"></script>
     </head>
-    <body ng-controller="mainController">
+    <body>
       <!-- HEADER AND NAVBAR -->
       <header class="navbar navbar-default navbar-static-top">
             <div class="container">
