--- a/static/partials/results.html
+++ b/static/partials/results.html
@@ -8,25 +8,20 @@
           <div class="form-group">
             <label>Filter</label>
             <input type="text" class="form-control" placeholder="Excellent condition">
-          </div>
-          <!-- Single button -->
-          <div class="btn-group">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-              Order By <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Relevance</a></li>
-              <li><a href="#">Newest</a></li>
-              <li><a href="#">Most $$$</a></li>
-              <li><a href="#">Least $$$</a></li>
-              <li><a href="#">Distance</a></li>
-            </ul>
+            <select class="selectpicker sort-picker" title="Sort 1">
+              <option>Least $$$</option>
+              <option>Most $$$</option>
+            </select>
+            <select class="selectpicker sort-picker" title="Sort 2">
+              <option>Newest</option>
+              <option>Oldest</option>
+            </select>
+            <select class="selectpicker sort-picker" title="Sort 3">
+              <option>Closest</option>
+              <option>Furthest</option>
+            </select>
           </div>
         </form>
-        <div style="margin-top:5px">
-          <label>Range:&nbsp;</label>{{distanceRange}} miles
-          <div range-slider min="5" max="500" model-max="distanceRange" pin-handle="min"></div>
-        </div>
       </div>
     </div>
   </div><!--.row-->
