--- a/static/resources/css/home-page-styles.css
+++ b/static/resources/css/home-page-styles.css
@@ -16,42 +16,16 @@
     border: 1px solid #a4c3ca;
     font: normal 16px 'trebuchet MS', arial, helvetica;
     background: #f1f1f1;
-    border-radius: 50px 3px 3px 50px;
+    border-radius: 60px 5px 5px 60px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset, 0 1px 0 rgba(255, 255, 255, 1);            
 }
 
 
 /* -----------Search Button------------ */
-
-#search-button
-{       
-    background-color: #800080;
-    background-image: linear-gradient(#CC00FF, #800080);
-    border-radius: 5px 60px 60px 5px;    
-    border-width: 1px;
-    border-style: solid;
-    border-color: #7eba7c #578e57 #447d43;
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 
-                0 1px 0 rgba(255, 255, 255, 0.3) inset;
+#search-button{
+    margin:2px 0 0 1px;
+    border-radius: 5px 60px 60px 5px;
     height: 60px;
     width: 60px;
-    cursor: pointer;
-    font: bold 14px Arial, Helvetica;
-    color: white;    
-    text-shadow: 0 1px 0 rgba(255,255,255,0.5);
-}
-
-#search-button:hover {       
-    background-color: #CC00FF;
-    background-image: linear-gradient(#800080, #CC00FF);
-}   
-
-#search-button:active {       
-    background: #CC00FF;
-    outline: none;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;        
-}
-
-#search-button::-moz-focus-inner {
-       border: 0;  /* Small centering fix for Firefox */
+    border: 1px solid #a4c3ca;
 }
