--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,8 @@
       <script src="{{url_for('static', filename='resources/bootstrap-3.2.0/js/bootstrap-select.min.js')}}"></script>
       <script src="{{url_for('static', filename='resources/bootbox.min.js')}}"></script>
       <script src="{{url_for('static', filename='resources/underscore-min.js')}}"></script>
+      <script src="{{url_for('static', filename='resources/sprintf.js')}}"></script>
+      <script src="{{url_for('static', filename='resources/angular-sprintf.js')}}"></script>
       <script src="{{url_for('static', filename='script.js')}}"></script>
     </head>
     <body>
