--- a/static/partials/results.html
+++ b/static/partials/results.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12">
       <!-- Filter Options -->
       <div class="well">
-        <p>Good news! We found some results for "<span>{{searchVal}}</span>"</p>
+        <p>{{resultsMsg}}&nbsp;"<span>{{searchVal}}</span>".</p>
         <form class="form-inline">
           <div class="form-group">
             <label>Filter</label>
