--- a/static/partials/createPost.html
+++ b/static/partials/createPost.html
@@ -8,9 +8,9 @@
         <div class="panel-body">
           <form role="form" class="form-inline">
             <div class="form-group">
-              <input type="text" ng-model="post.title" class="form-control" placeholder="What am I?" required>
-              <input type="number" ng-model="post.location" class="form-control" placeholder="Zip Code" required>
-              <input type="number" ng-model="post.price" class="form-control" placeholder="$1,000,000" required>
+              <input type="text" ng-model="post.title" class="form-control" placeholder="What am I?" value="post.title" required>
+              <input type="number" ng-model="post.location" class="form-control" placeholder="Zip Code" value="post.location" required>
+              <input type="number" ng-model="post.price" class="form-control" placeholder="$1,000,000" value="post.price" required>
             </div>
           </form>
           <form role="form">
@@ -49,7 +49,7 @@
   <div class="row">
     <div class="center-block">
         <button class="btn btn-lg btn-default" ng-click="onCancel()">Cancel</button>
-        <button class="btn btn-lg btn-primary" ng-click="onShowPreview()">Preview</button>
+        <button class="btn btn-lg btn-primary" type="submit" ng-click="onPreview()">Preview</button>
     </div>
   </div>
 </div><!--container-->
