--- a/static/partials/createPost.html
+++ b/static/partials/createPost.html
@@ -40,7 +40,7 @@
       <h4>Uploaded Images</h4>
       <ul id="small-img-list" class="list-inline">
         <li ng-repeat="file in allFiles">
-          <img src="{{file.url}}" class="img-thumbnail" width="150" height="150"></img>
+          <img ng-src="{{file.url}}" class="img-thumbnail" width="150" height="150"></img>
         </li>
       </ul>
     </div>
