--- a/static/partials/createPost.html
+++ b/static/partials/createPost.html
@@ -27,24 +27,20 @@
         </div>
       </div><!--#form-panel-->
     </div>
-    <div id="images" class="col-xs-12 col-sm-6">
-      <div ng-file-select ng-file-drop ng-model="droppedFile" ng-model-rejected="rejFiles" ng-accept="accept" accept="image/*" ng-disabled="disabled" ng-capture="capture" drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}" class="big-drop-box ng-pristine ng-valid" drop-available="dropAvailable">Click to Upload
-      <br><span ng-show="dropAvailable">or Drag/Drop</span>
-      <br><span><i class="fa fa-camera"></i></span>
+    <div class="col-xs-12 col-sm-6">
+      <div id="img-upload-well" class="well well-lg">
+        <button class="btn btn-lg btn-default" ng-click="onSelectFile()">Select Image</button>
+        <input id="file-input" type="file" accept="image/*" ng-model="image" onchange="angular.element(this).scope().onFileSelected(this.files)">
+        <ul id="small-img-list" class="list-inline">
+          <li ng-repeat="file in allFiles">
+            <img ng-src="{{file.url}}" class="img-thumbnail" width="150" height="150"></img>
+          </li>
+        </ul>
       </div>
     </div>
   </div><!--.row-->
 
-  <div class="row">
-    <div id="img-upload-well" class="well well-lg">
-      <h4>Uploaded Images</h4>
-      <ul id="small-img-list" class="list-inline">
-        <li ng-repeat="file in allFiles">
-          <img ng-src="{{file.url}}" class="img-thumbnail" width="150" height="150"></img>
-        </li>
-      </ul>
-    </div>
-  </div>
+
 
   <div class="row">
     <div class="center-block">
