--- a/static/partials/previewPost.html
+++ b/static/partials/previewPost.html
@@ -20,11 +20,7 @@
     <div class="col-xs-12 col-sm-6">
       <carousel style="height: 305px">
         <slide ng-repeat="photo in post.photos">
-          <img src="{{photo.url}}" style="margin:auto; height:300px;">
-          <div class="carousel-caption">
-            <h4>Slide Demo</h4>
-            <p>Description</p>
-          </div>
+          <img ng-src="{{photo.url}}" style="margin:auto; height:300px;">
         </slide>
       </carousel>
     </div><!--images-->
