Favs Check For 0
Added <hr> to post info.

--- a/static/partials/livePost.html
+++ b/static/partials/livePost.html
@@ -10,7 +10,9 @@
               <h4>${{post.Price}}</h4>
               <p>{{post.Description}}</p>
             </div>
+            <hr>
             <div>
+              <h5>Contact Info</h5>
               <h6>{{post.Location}}</h6>
               <h6>{{post.Email}}</h6>
             </div>
@@ -22,15 +24,11 @@
         <slide active="slide.active">
           <img src="static/resources/img/placeholder.jpeg" style="margin:auto; height:300px;">
           <div class="carousel-caption">
-            <h4>Slide Demo</h4>
-            <p>Description</p>
           </div>
         </slide>
         <slide>
           <img src="static/resources/img/placeholder.jpeg" style="margin:auto; height:300px">
           <div class="carousel-caption">
-            <h4>Slide Demo</h4>
-            <p>Description</p>
           </div>
         </slide>
       </carousel>
