--- a/static/partials/previewPost.html
+++ b/static/partials/previewPost.html
@@ -10,7 +10,9 @@
               <h4>${{post.price}}</h4>
               <p>{{post.description}}</p>
             </div>
+            <hr>
             <div>
+              <h5>Contact Info</h5>
               <h6>{{post.location}}</h6>
               <h6>{{post.email}}</h6>
             </div>
