--- a/templates/index.html
+++ b/templates/index.html
@@ -43,8 +43,8 @@
                 </div>
                 <div class="collapse navbar-collapse navHeaderCollapse">
                   <ul id="nav-list" class="nav navbar-nav navbar-right center-block">
-                      <li><a href="#createPost"><i class="fa fa-plus"></i> Post</a></li>
-                      <li><a href="#favorites"><i class="fa fa-star"></i> Favs</a></li>
+                      <li><a id="post-nav-btn" href="#createPost"><i class="fa fa-plus"></i>&nbsp;Post</a></li>
+                      <li><a id="favs-nav-btn" href="#favorites"><i class="fa fa-star"></i>&nbsp;Favs</a></li>
                       <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                           <i class="fa fa-question"></i>
