DB Service Returns Photos
Photos are shown in more views.

--- a/static/partials/favorites.html
+++ b/static/partials/favorites.html
@@ -4,7 +4,7 @@
       <ul class="list-inline">
         <li ng-repeat="post in favorites">
           <div id="post" class="post" ng-click="onLoadPost(post)">
-            <img src="static/resources/img/placeholder.jpeg"></img>
+            <img class="results-img" ng-src="{{post.Photos[0]}}"></img>
             <h4>{{post.Title}}</h4>
             <h5>${{post.Price}}<h5>
           </div>
