--- a/static/partials/previewPost.html
+++ b/static/partials/previewPost.html
@@ -22,7 +22,7 @@
     <div class="col-xs-12 col-sm-6">
       <carousel style="height: 305px">
         <slide ng-repeat="photo in post.photos">
-          <img ng-src="{{photo.url}}" style="margin:auto; height:300px;">
+          <img class="carousel-img" ng-src="{{photo.url}}">
         </slide>
       </carousel>
     </div><!--images-->
