--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" href="{{url_for('static', filename='resources/css/create-post-page-styles.css')}}" />
       <link rel="stylesheet" href="{{url_for('static', filename='resources/css/master.css')}}" />
       <link rel="stylesheet" href="{{url_for('static', filename='resources/css/results-page.css')}}" />
+      <link rel="stylesheet" href="{{url_for('static', filename='resources/css/preview-page.css')}}" />
       <!-- SPELLS -->
       <script src="{{url_for('static', filename='resources/jquery-2.1.3.min.js')}}"></script>
       <script src="{{url_for('static', filename='resources/angular.min.js')}}"></script>
