--- a/static/partials/livePost.html
+++ b/static/partials/livePost.html
@@ -3,26 +3,26 @@
     <div class="col-xs-12 col-sm-6">
       <div class="panel panel-default" style="height: 305px">
         <header class="panel-heading">
-          <h4 class="panel-title">{{post.Title}}</h4>
+          <h4 class="panel-title">{{post.title}}</h4>
         </header>
         <div class="panel-body">
             <div>
-              <h4>${{post.Price}}</h4>
-              <p>{{post.Description}}</p>
+              <h4>${{post.price}}</h4>
+              <p>{{post.description}}</p>
             </div>
             <hr>
             <div>
               <h5>Contact Info</h5>
-              <h6>{{post.Location}}</h6>
-              <h6>{{post.Email}}</h6>
+              <h6>{{post.location}}</h6>
+              <h6>{{post.email}}</h6>
             </div>
         </div>
       </div>
     </div>
     <div class="col-xs-12 col-sm-6">
       <carousel style="height: 305px">
-        <slide ng-repeat="url in post.Photos">
-          <img class="carousel-img" ng-src="{{url}}">
+        <slide ng-repeat="photo in post.photos">
+          <img class="carousel-img" ng-src="/image_uploads?guid={{post.guid}}&filename={{photo}}">
         </slide>
       </carousel>
     </div><!--images-->
