--- a/static/resources/css/master.css
+++ b/static/resources/css/master.css
@@ -32,3 +32,81 @@ textarea {
 .inline-block{
     display: inline-block;;
 }
+
+#search-bar-row {
+    padding:5px;
+}
+
+#header-text {
+    text-align: center;
+    color: #999999;
+}
+
+/* -----------Search Text Field------------ */
+
+#search-text-field {
+    padding: 5px 9px;
+    height: 60px;
+    min-width: 192px;
+    border: 1px solid #a4c3ca;
+    font: normal 16px 'trebuchet MS', arial, helvetica;
+    background: #f1f1f1;
+    border-radius: 60px 5px 5px 60px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset, 0 1px 0 rgba(255, 255, 255, 1);            
+}
+
+
+/* -----------Search Button------------ */
+#search-button{
+    margin:2px 0 0 1px;
+    border-radius: 5px 60px 60px 5px;
+    height: 60px;
+    width: 60px;
+    border: 1px solid #a4c3ca;
+}
+
+.carousel-img{
+    margin:auto;
+    max-height:305px;
+}
+
+.results-img{
+    width: 250px;
+}
+
+div.post{
+    padding:5px;
+    cursor: pointer;
+}
+
+div.post:hover{
+    background-color: gray;
+}
+
+.sort-picker {
+    width:100px !important;
+}
+
+.sort-picker > button{
+    width:100px !important;
+}
+
+#small-img-list {
+    list-style-type: none;
+}
+
+#file-input {
+    display: none;
+}
+
+input {
+    color:black !important;
+}
+
+textarea {
+    color:black !important;
+}
+
+.bad-input{
+    border: 2px solid red;
+}
