Modified File write/read for images
Other various changes. Added primary photo and delete photo features
for creating a post.

--- a/static/partials/createPost.html
+++ b/static/partials/createPost.html
@@ -29,18 +29,21 @@
     </div>
     <div class="col-xs-12 col-sm-6">
       <div id="img-upload-well" class="well well-lg">
-        <button class="btn btn-lg btn-default" ng-click="onSelectFile()">Select Image</button>
+        <button id="add-img-btn" class="btn btn-lg btn-default center-block" ng-click="onSelectFile()">Select Images</button>
+        <p>Select the <i class="fa fa-star fa-2x"></i> to indicate your primary photo. If you change your mind, select the <i class="fa fa-trash-o fa-2x"></i> to delete a photo.</p>
         <input id="file-input" type="file" accept="image/*" ng-model="image" onchange="angular.element(this).scope().onFileSelected(this.files)">
         <ul id="small-img-list" class="list-inline">
           <li ng-repeat="photo in post.photos">
-            <img ng-src="{{photo.url}}" class="img-thumbnail" width="150" height="150"></img>
+            <img ng-src="{{photo.url}}" class="img-thumbnail" width="180" height="180"></img>
+            <div class="btn-group-md center-block" role="group">
+            <button type="button" ng-disabled="photo.isMain == true" class="btn btn-default" ng-click="onStarPhoto(photo)"><i ng-class="{'main-photo-icon': photo.isMain}" class="fa fa-star"></i></button>
+            <button type="button" class="btn btn-default" ng-click="onDeletePhoto(photo)"><i class="fa fa-trash-o"></i></button>
+            </div>
           </li>
         </ul>
       </div>
     </div>
   </div><!--.row-->
-
-
 
   <div class="row">
     <div class="center-block">
