--- a/static/partials/previewPost.html
+++ b/static/partials/previewPost.html
@@ -27,14 +27,16 @@
       </carousel>
     </div><!--images-->
   </div><!--.row-->
-  <div class="center-block">
-    <button class="btn btn-md btn-default" ng-click="onBack()">
-      <i class="fa fa-edit" ></i>
-      Back to Edit
-    </button>
-    <button class="btn btn-md btn-success" ng-click="onSubmit()">
-      <i class="fa fa-check"></i>
-      Looks Good!
-    </button>
+  <div class="row btn-container">
+    <div class="center-block">
+      <button class="btn btn-lg btn-default" ng-click="onBack()">
+        <i class="fa fa-edit" ></i>
+        Back to Edit
+      </button>
+      <button class="btn btn-lg btn-success" ng-click="onSubmit()">
+        <i class="fa fa-check"></i>
+        Looks Good!
+      </button>
+    </div>
   </div>
 </div><!--container-->
