--- a/static/resources/css/master.css
+++ b/static/resources/css/master.css
@@ -10,6 +10,10 @@ textarea {
     margin: 2px;
 }
 
+#add-img-btn {
+    margin-bottom: 5px;
+}
+
 #main {
     overflow: auto;
     padding-bottom: 150px;
@@ -42,8 +46,6 @@ textarea {
     color: #999999;
 }
 
-/* -----------Search Text Field------------ */
-
 #search-text-field {
     padding: 5px 9px;
     height: 60px;
@@ -55,8 +57,6 @@ textarea {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset, 0 1px 0 rgba(255, 255, 255, 1);            
 }
 
-
-/* -----------Search Button------------ */
 #search-button{
     margin:2px 0 0 1px;
     border-radius: 5px 60px 60px 5px;
@@ -109,4 +109,13 @@ textarea {
 
 .bad-input{
     border: 2px solid red;
+}
+
+.btn-container{
+    padding:20px;
+}
+
+.main-photo-icon{
+    color:gold;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;;
 }
