--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -1,6 +1,6 @@
 <!-- home.html -->
 <div class="container-fluid">
-	<h1 id="header-text">{{ header }}</h1>
+	<h1 class="dim-header text-center">{{ header }}</h1>
 	<div id="search-bar-row" class="row">
 	  <div class="col-xs-12">
 	    <div class="input-group">
