--- a/static/partials/livePost.html
+++ b/static/partials/livePost.html
@@ -37,7 +37,7 @@
         <i class="fa fa-star"></i>
         {{favBtnText}}
       </button>
-      <button class="btn btn-lg btn-danger" ng-click="onFlag()">
+      <button class="btn btn-lg btn-danger" ng-click="onFlag()" ng-disabled="isFlagBtnDisabled == true">
         <i class="fa fa-flag"></i>
         Flag
       </button>
