--- a/templates/index.html
+++ b/templates/index.html
@@ -47,9 +47,8 @@
                           <i class="fa fa-question"></i>
                         </a>
                         <ul class="dropdown-menu" role="menu">
-                          <li class="center-block"><a href="">About</a></li>
-                          <li class="center-block"><a href="">Cool Tips</a></li>
-                          <li class="center-block"><a href="#contact">Contact Us</a></li>
+                          <li class="center-block"><a href="#about">About</a></li>
+                          <li class="center-block"><a href="#tips">Cool Tips</a></li>
                         </ul>
                       </li>
                   </ul>
