--- a/static/partials/livePost.html
+++ b/static/partials/livePost.html
@@ -13,7 +13,7 @@
             <hr>
             <div>
               <h5>Contact Info</h5>
-              <h6>{{post.location}}</h6>
+              <h6>{{post.zip_code}}</h6>
               <h6>{{post.email}}</h6>
             </div>
         </div>
