--- a/static/partials/previewPost.html
+++ b/static/partials/previewPost.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <div ng-Show="editModeEnabled" class="alert alert-info" role="alert">EDIT MODE</div>
   <div class="row">
     <div class="col-xs-12 col-sm-6">
       <div class="panel panel-default" style="height: 305px">
@@ -13,7 +14,7 @@
             <hr>
             <div>
               <h5>Contact Info</h5>
-              <h6>{{post.location}}</h6>
+              <h6>{{post.zip_code}}</h6>
               <h6>{{post.email}}</h6>
             </div>
         </div>
