Adjusted naming convention
lower case table and more concise column names.

--- a/static/partials/createPost.html
+++ b/static/partials/createPost.html
@@ -10,13 +10,13 @@
           <form role="form" class="form-inline">
             <div class="form-group">
               <input id="title" type="text" ng-model="post.title" class="form-control" placeholder="What am I?" value="post.title">
-              <input id="zip_code" type="number" ng-model="post.zip_code" class="form-control" placeholder="Zip Code" value="post.zip_code">
+              <input id="zip" type="number" ng-model="post.zip" class="form-control" placeholder="Zip Code" value="post.zip">
               <input id="price" type="number" ng-model="post.price" class="form-control" placeholder="$1,000,000" value="post.price">
             </div>
           </form>
           <form role="form">
             <div class="form-group">
-              <textarea id="description" class="form-control" ng-model="post.description" placeholder="Describe me!"></textarea>
+              <textarea id="desc" class="form-control" ng-model="post.desc" placeholder="Describe me!"></textarea>
             </div>
           </form>
           <form role="form">
