--- a/static/partials/previewPost.html
+++ b/static/partials/previewPost.html
@@ -9,12 +9,12 @@
         <div class="panel-body">
             <div>
               <h4>${{post.price}}</h4>
-              <p>{{post.description}}</p>
+              <p>{{post.desc}}</p>
             </div>
             <hr>
             <div>
               <h5>Contact Info</h5>
-              <h6>{{post.zip_code}}</h6>
+              <h6>{{post.zip}}</h6>
               <h6>{{post.email}}</h6>
             </div>
         </div>
