--- a/templates/index.html
+++ b/templates/index.html
@@ -6,24 +6,21 @@
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1"/>
       <!-- SCROLLS -->
-      <link rel="stylesheet" href="{{url_for('static', filename='resources/bootstrap-3.2.0/css/bootstrap.min.css')}}" />
-      <link rel="stylesheet" href="{{url_for('static', filename='resources/bootstrap-3.2.0/css/bootstrap-theme.min.css')}}" />
-      <link rel="stylesheet" href="{{url_for('static', filename='resources/bootstrap-3.2.0/css/ui-bootstrap-csp.css')}}" />
-      <link rel="stylesheet" href="{{url_for('static', filename='resources/bootstrap-3.2.0/css/bootstrap-select.min.css')}}" />
-      <link rel="stylesheet" href="{{url_for('static', filename='resources/font-awesome-4.3.0/css/font-awesome.min.css')}}" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.2/css/bootstrap-select.min.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
       <link rel="stylesheet" href="{{url_for('static', filename='resources/css/master.css')}}" />
       <!-- SPELLS -->
-      <script src="{{url_for('static', filename='resources/jquery-2.1.3.min.js')}}"></script>
-      <script src="{{url_for('static', filename='resources/angular.min.js')}}"></script>
-      <script src="{{url_for('static', filename='resources/angular-route.min.js')}}"></script>
-      <script src="{{url_for('static', filename='resources/bootstrap-3.2.0/js/bootstrap.min.js')}}"></script>
-      <script src="{{url_for('static', filename='resources/bootstrap-3.2.0/js/ui-bootstrap-0.13.0.min.js')}}"></script>
-      <script src="{{url_for('static', filename='resources/bootstrap-3.2.0/js/ui-bootstrap-tpls.min.js')}}"></script>
-      <script src="{{url_for('static', filename='resources/bootstrap-3.2.0/js/bootstrap-select.min.js')}}"></script>
-      <script src="{{url_for('static', filename='resources/bootbox.min.js')}}"></script>
-      <script src="{{url_for('static', filename='resources/underscore-min.js')}}"></script>
-      <script src="{{url_for('static', filename='resources/sprintf.js')}}"></script>
-      <script src="{{url_for('static', filename='resources/angular-sprintf.js')}}"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.2/js/bootstrap-select.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/sprintf/1.0.3/sprintf.min.js"></script>
       <script src="{{url_for('static', filename='script.js')}}"></script>
     </head>
     <body>
