--- a/static/resources/css/master.css
+++ b/static/resources/css/master.css
@@ -2,12 +2,11 @@ html, body{
 	height: 100%;
 }
 
-input {
-    margin: 2px;
-}
-
-textarea {
-    margin: 2px;
+.post-input-div{
+    margin-bottom:2px;
+    margin-top:2px;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
 #add-img-btn {
@@ -57,7 +56,6 @@ textarea {
 }
 
 #search-button{
-    margin:2px 0 0 1px;
     border-radius: 5px 60px 60px 5px;
     height: 60px;
     width: 60px;
